Resources/public/less/bootstrapp/bootstrap-commons.less
/*!
 * bootstrap-commons.less v1.0.0
 *
 * Copyright (c) 2012-2014, Nathanaël Mariani <github@nmariani.fr>
 * For the full copyright and license information, please view the LICENSE
 * file that was distributed with this source code.
 */


/*------------------------------*
 * Bootstrapp commons           *
 *------------------------------*/
@import "commons";


/*------------------------------*
 * Twitter Bootstrap commons    *
 *------------------------------*/

// Dropdown
// --------------------
.nav.dropdown-hover .dropdown:hover > .dropdown-menu {
  display: block;
}
.dropdown-menu {
  min-width: 100px;
  margin:0;
}
// Hover state
.dropdown-menu a:hover,
.dropdown-menu .active a,
.dropdown-menu .active a:hover {
  color: @white;
  text-decoration: none;
  background-color: @baseColor;
}
.dropdown-menu li a:hover > [class^="icon-"],
.dropdown-menu li a:hover > [class*=" icon-"],
.dropdown-menu .active a > [class^="icon-"],
.dropdown-menu .active a > [class*=" icon-"],
.dropdown-menu .active a:hover > [class^="icon-"],
.dropdown-menu .active a:hover > [class*=" icon-"] {
  color: @white;
}
// form
.dropdown-menu li form {
  margin:0;
  a {
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    white-space: nowrap;
  }
}

// Navbar / Nav
// --------------------
.navbar .nav li.dropdown.open > .dropdown-toggle,
.navbar .nav li.dropdown.active > .dropdown-toggle,
.navbar .nav li.dropdown.open.active > .dropdown-toggle {
  background-color: transparent;
}
.navbar-inverse li a > [class^="icon-"],
.navbar-inverse li a > [class*=" icon-"] {
  color: @white;
}
.nav img {
  max-height: 18px;
}
.navbar .nav {
  a, p, h1, h2, h3, h4 {
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    user-select: none;
  }
}

// Tabs
// -------------------------
.nav-tabs-wrapper {
  .flexbox();
  position: absolute;
  width: 100%;
  z-index: 1;
  overflow: hidden;

  > .nav-tabs {
    position: relative;
    .flex(1, 1, auto);
    overflow: hidden;
    white-space: nowrap;

    > li {
      float:none;
      display:inline-block;

      > a {
        margin-right: 0;
      }
    }
  }

  > button {
    .flex(0, 0, auto);
    display: none;
    background: @gray-lighter;
    width: 30px;
    z-index: 1;
  }
}

// Footer
// --------------------
body > footer {
  > span {
    display: inline-block;
    text-align: left;
    font-size: 13px;
    &:not(:first-child) {
      margin-left: 10px;
    }
  }
  .locale-dropdown {
    img {
      margin-top: -4px;
      max-height: 20px;
    }
    .dropdown-menu {
      z-index: 0;
      width:190px;
      left: 0;
      right: auto;
      margin-bottom: 5px;
      margin-left: -20px;
      border-radius: 6px 6px 0 0;
      border: none;
      .box-shadow(none);
    }
  }
}

// Forms
// --------------------
.form-horizontal {
  input[type="radio"] {
    margin: 0;
    vertical-align: 1px;

    &:not(:first-of-type) {
        margin-left: 10px;
    }

    + .control-label {
        display: inline-block;
        margin-left: 5px;
    }
  }
}
[data-type="datetime"] {
  .input-append:not(:first-of-type),
  .input-prepend:not(:first-of-type) {
    margin-left: -1px;
  }

  .input-prepend:not(:first-of-type),
  .input-append:not(:last-of-type) {
    .add-on {
      border-radius: 0;
    }
  }

  .input-prepend:not(:last-of-type),
  .input-append:not(:first-of-type) {
    input {
      border-radius: 0;
    }
  }
}
.clear-form-horizontal {
  .control-label,
  .control-label + div {
    float: none;
    width: auto;
    text-align: left;
    margin-left: 0;
  }
}

// Thumbnails
// --------------------
.thumbnail {
  background-color: @white;
  min-width: 30px;
  min-height: 30px;

  &.circle,
  &.square,
  &.ratio1_1,
  &.ratio2_1,
  &.ratio1_2,
  &.ratio4_3,
  &.ratio16_9 {
    > div:first-child,
    > span:first-child,
    > i:first-child {
      top: 4px;
      right: 4px;
      bottom: 4px;
      left: 4px;
    }
    > img:first-child {
      padding: 4px;
      .box-sizing(border-box);
    }
  }

  &.circle {
    > *:first-child {
      border-radius: 50%;
    }
  }

  &.thumbnail-xs {
    max-width: 30px;
    max-height: 30px;
  }

  &.thumbnail-sm {
    max-width: 50px;
    max-height: 50px;
  }

  &.thumbnail-md {
    max-width: 80px;
    max-height: 80px;
  }

  &.thumbnail-lg {
    max-width: 120px;
    max-height: 120px;
  }
}
.thumbnail > i:first-child:last-child {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: auto;
  height: 46px;
  width: 46px;
  font-size: 46px;
  line-height: 46px;
  text-align: center;
}
table > tbody > tr > td > .thumbnail {
  width: 50px;
  .ratio(1, 1);

  > *:first-child:not(img) {
    top: 2px;
    right: 2px;
    bottom: 2px;
    left: 2px;
  }
}

.flashes {
    margin-bottom: 20px;
}

